# osgSSAO

./: CMakeLists.txt  CameraModel.cpp  CameraModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NodeMask.cpp  NodeMask.h  OSGWidget.cpp  OSGWidget.h  Osg3dSSAOView.cpp  Osg3dSSAOView.h  Osg3dViewWithCamera.cpp  Osg3dViewWithCamera.h  README.md  SSAONode.cpp  SSAONode.h  UiEventWidget.cpp  UiEventWidget.h  VectorFunctions.cpp  VectorFunctions.h  blur.fp  blur.vp  main.cpp  phong.fp  phong.vp  shaders.qrc  ssao.fp  ssao.vp
